@@ -1,3 +1,11 @@
+2001-02-21  Torbjorn Granlund  <tege@swox.com>
+
+	* mpn/sparc64/copyi.asm: Streamline for small operands.
+	* mpn/sparc64/add_n.asm: Likewise.
+	* mpn/sparc64/sub_n.asm: Likewise.
+
+	* mpn/sparc64/copyd.asm: New file.
+
 2001-02-20  Torbjorn Granlund  <tege@swox.com>
 
 	* mpn/sparc64/lshift.asm: Rewrite.
